# Fastapi_doctolib

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2748d6c9b4b4_full_models_added.py  466e83473c2b_full_models_fixed.py  69ed78f0093a_user_role_specialty.py  9870d2e36b11_user_role_specialty.py  b1e47a49dfda_initial.py  c77f25c1a68d_created_at_and_description_change.py  e61069e2e094_added_serializer.py
app/: main.py
app/api/: exceptions.py
app/api/endpoints/: __init__.py  appointments.py  auth.py  branches.py  payments.py  rooms.py  schedules.py  sections.py  specialties.py  user.py
app/api/security_utils/: auth_state.py  password.py
app/api/v1/: routers.py
app/core/: config.py
app/db/: session.py
app/models/: __init__.py  appointment.py  appointment_transition.py  branch.py  enums.py  payment.py  schedule.py  specialty.py  user.py
app/schema/: appointment.py  auth.py  branch.py  schedule.py  specialty.py  user.py
